Check exception flag as a bool [Bug #15987]